Subida de cambios footer, y principio de acceso a BD

--- a/PaginaPrincipal/src/app/app.component.html
+++ b/PaginaPrincipal/src/app/app.component.html
@@ -1,1 +1,5 @@
-<router-outlet></router-outlet>
+
+
+  <router-outlet></router-outlet> <!-- Los componentes se cargarán aquí -->
+
+<app-footer></app-footer> <!-- Footer siempre al fondo -->
