--- a/PaginaPrincipal/src/app/pages/login/login.component.html
+++ b/PaginaPrincipal/src/app/pages/login/login.component.html
@@ -24,7 +24,7 @@
     </form>
   
     <div class="register-link">
-      <p>Aún no tienes cuenta? <a routerLink="/register">Regístrate aquí</a></p>
+      <p>Aún no tienes cuenta? <a [routerLink]="['/register']" class="">Regístrate aquí</a></p>
     </div>
   </div>
   
