--- a/PaginaPrincipal/src/app/components/footer/footer.component.html
+++ b/PaginaPrincipal/src/app/components/footer/footer.component.html
@@ -1,1 +1,11 @@
-<p>footer works!</p>
+<footer class="footer">
+    <div class="container">
+      <p>&copy; 2025 AutoCare Hub. Todos los derechos reservados.</p>
+      <div class="social-links">
+        <a href="https://facebook.com" target="_blank" class="social-icon">Facebook</a>
+        <a href="https://twitter.com" target="_blank" class="social-icon">Twitter</a>
+        <a href="https://instagram.com" target="_blank" class="social-icon">Instagram</a>
+      </div>
+    </div>
+  </footer>
+  
