Se hace el servicio de textos multiidioma,se hace el cambio del formulario de registro, y se pone el logo en el formulario de login y también en el formulario de registro

--- a/AUTOCAREHUB/src/app/components/home/home.component.html
+++ b/AUTOCAREHUB/src/app/components/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<div class="home-buttons">
+    <button routerLink="/facturas" class="btn btn-primary">
+      Acceder a Facturas
+    </button>
+    <button routerLink="/pedir-cita" class="btn btn-secondary">
+      Pedir una Cita
+    </button>
+  </div>
