Se hace tanto la parte del API como la parte del front para poder pedir citas

--- a/AUTOCAREHUB/src/app/components/home/home.component.html
+++ b/AUTOCAREHUB/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
     <button routerLink="/facturas" class="btn btn-primary">
       Acceder a Facturas
     </button>
-    <button routerLink="/pedir-cita" class="btn btn-secondary">
+    <button routerLink="/makeAppointment" class="btn btn-secondary">
       Pedir una Cita
     </button>
   </div>
