generador de facturas y  arreglos varios

--- a/AUTOCAREHUB/src/app/components/home/home.component.html
+++ b/AUTOCAREHUB/src/app/components/home/home.component.html
@@ -1,8 +1,12 @@
-<div class="home-buttons">
-    <button routerLink="/facturas" class="btn btn-primary">
-      Acceder a Facturas
-    </button>
-    <button routerLink="/makeAppointment" class="btn btn-secondary">
-      Pedir una Cita
-    </button>
+<div class="container">
+  <app-menu></app-menu>
+  <div class="row align-items-center">
+    <div class="col-md-6">
+      <img src="img/LogoNaranjaAplicacion.png" alt="" class="img-fluid">
+    </div>
+    <div class="col-md-6">
+      <h1 class="title">Bienvenido a AutocareHub!</h1>
+      <h2 class="subtitle">La solución para cuidar tu coche de una forma sencilla</h2>
+    </div>
   </div>
+</div>
